--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="project-name">
-                    <img src="./img/wbld.jpg" alt="sample proj">
+                    <img src="./img/wbldA.jpg" alt="sample proj">
                     <div class="project-content">
                         <h2>WBLD</h2>
                         <p>ReactJs/Styled-components</p>
