--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <h2>WBLD</h2>
                         <p>ReactJs/Styled-components</p>
                         <p>A website that allows web designers to promote their work while also catering to their clients' needs remotely and conveniently.</p>
-                        <a href="https://heuristic-shirley-2065d0.netlify.app/portfolio"><button>View project</button></a>
+                        <a href=https://heuristic-shirley-2065d0.netlify.app/"><button>View project</button></a>
                     </div>
                 </div>
 
