--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                     <div class="project-content">
                         <h2>WBLD</h2>
                         <p>ReactJs/Styled-components</p>
-                        <p>A website that allows web designers to promote their work while also catering to their clients' needs remotely and conveniently.</p>
-                        <a href="https://heuristic-shirley-2065d0.netlify.app/"><button>View project</button></a>
+                        <p>A website that caters the queries of their clients with businesses design and development problem which helps them to solve it remotely and conveniently.</p>
+                        <a href="https://nifty-bhaskara-9c7adf.netlify.app/"><button>View project</button></a>
                     </div>
                 </div>
 
