--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="project-content">
                         <h2>WBLD</h2>
                         <p>ReactJs/Styled-components</p>
-                        <p>A website that caters the queries of their clients with businesses design and development problem which helps them to solve it remotely and conveniently.</p>
+                        <p>A website that answers the problem of clients with businesses design and development problem remotely and conveniently.</p>
                         <a href="https://nifty-bhaskara-9c7adf.netlify.app/"><button>View project</button></a>
                     </div>
                 </div>
